--- a/index.html
+++ b/index.html
@@ -3,9 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://kit.fontawesome.com/ac0885c8f6.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
     <title>Embedding Videos and Images</title>
 </head>
 <body>
-    
+    <div class="nav-layout">
+         <div class="logo">
+            <div class="menu-icon">
+                <i class="fas fa-bars"></i>
+            </div>
+            <div class="youtube-icon">
+                <img src="./images/youtube-logo.png" alt="youtube icon" />
+            </div>
+        </div> 
+
+        <div class="search">    
+            <input type="search" placeholder="Search" />
+            <button type="submit"><i class="fas fa-search"></i></button>
+        </div>
+
+        <div class="notify">
+            <div class="upload">
+                <img src="./images/upload.png" alt="upload file icon">
+            </div>
+            <div class="sign-in">
+                <button>Sign In</button>
+            </div>
+            <div class="notify-bell">
+                <i class="fas fa-bell"></i>
+            </div>
+        </div>
+
+
+    </div>
 </body>
 </html>
