--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,18 +8,19 @@
     <link rel="stylesheet" href="style.css">
     <title>Embedding Videos and Images</title>
 </head>
+
 <body>
     <div class="nav-layout">
-         <div class="logo">
+        <div class="logo">
             <div class="menu-icon">
                 <i class="fas fa-bars"></i>
             </div>
             <div class="youtube-icon">
                 <img src="./images/youtube-logo.png" alt="youtube icon" />
             </div>
-        </div> 
+        </div>
 
-        <div class="search">    
+        <div class="search">
             <input type="search" placeholder="Search" />
             <button type="submit"><i class="fas fa-search"></i></button>
         </div>
@@ -34,8 +36,100 @@
                 <i class="fas fa-bell"></i>
             </div>
         </div>
-
-
     </div>
+    <section class="bottom-section">
+        <div class="left-side">
+
+            <div class="video">
+                <iframe width="100%" height="350px" src="https://www.youtube.com/embed/wyj17UwXkbU" frameborder="0"
+                    allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                    allowfullscreen></iframe>
+            </div>
+
+            <div class="video-meta-wrapper">
+                <div class="video-title">
+                    <h1>Microverse Coding Challenges</h1>
+                </div>
+                <div class="video-stats-wrapper">
+                    <div class="left-stats">
+
+                        <div class="thumbnail">
+                            <h1>T</h1>
+                        </div>
+
+                        <div class="chanel-name-sub-wrapper">
+                            <div class="channel-name">
+                                Microverse
+                            </div>
+                            <div class="subscribe-button">
+                                <span class="red-part">
+                                    <i class="fab fa-youtube"></i>
+                                    Subscribe
+                                </span>
+                                <span class="sub-counter">
+                                    7999
+                                </span>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="right-stats">
+                        <div class="views-counter">
+                            <div>
+                                <h1> 50,016 views </h1>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <div class="actions-wrapper">
+
+                    <div class="actions-buttons">
+                        <div class="actions-buttons-wrapper">
+                            <div>
+                                <i class="fas fa-plus"></i>
+                                add to
+                            </div>
+                            <div>
+                                <i class="fas fa-plus"> </i>
+                                share
+                            </div>
+                            <div>
+                                <i class="fas fa-ellipsis-h"> </i>
+                                more
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="like-dislike">
+                        <i class="fas fa-thumbs-up">300</i>
+                        <i class="fas fa-thumbs-down">100</i>
+                    </div>
+                </div>
+
+
+            </div>
+
+
+            <div class="description">
+                <h5>Published on Feb 27, 2014</h5>
+                <p>How do you contribute to open source? In this video, I'll describe the easiest way to make a simple
+                    contribution to an open source project -- without using the command line, a text editor, "forking a
+                    repo", or even touching Git outside of Github. I'll also describe what kinds of contributions open
+                    source software projects are typically looking for. As an example, I use submitting a student
+                    solution to a web development exercise from The Odin Project, a free online curriculum for learning
+                    web development with Ruby on Rails. You can find more information about that project at
+                    http://theodinproject.com.</p>
+
+            </div>
+        </div>
+        <div class="right-side">
+            commments
+        </div>
+    </section>
+
 </body>
+
 </html>
