--- a/index.html
+++ b/index.html
@@ -126,7 +126,34 @@
             </div>
         </div>
         <div class="right-side">
-            commments
+            <div>
+                Up next
+                <div class="right-side-wrapper">
+                    <div class="right-side-video">
+                        <iframe width="98%" height="auto" src="https://www.youtube.com/embed/f9ip1iSAptQ"
+                            frameborder="0" allow="accelerometer; autoplay; 
+                            encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
+                    <div class="right-side-stats-wrapper">
+                        <div class="right-side-title">
+                            What is Microverse
+                        </div>
+                        <div class="right-side-channel">
+                            Microverse
+                        </div>
+                        <div class="right-side-views">
+                            views
+                        </div>
+                    </div>
+                </div>
+
+
+
+            </div>
+
+            <div class="next-video-desc">
+
+            </div>
         </div>
     </section>
 
