Adjusted video size, share button and readme

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
     <main class="bottom-section">
         <section class="left-side">
 
-            <div class="video">
-                <iframe height="350" style="width: 100%; border: none" src="https://www.youtube.com/embed/wyj17UwXkbU"
+            
+                <iframe  style="width: 100%; border: none; height: 500px;" src="https://www.youtube.com/embed/wyj17UwXkbU"
                     allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
                     allowfullscreen></iframe>
-            </div>
+            
 
             <div class="video-meta-wrapper">
                 <div class="video-title">
@@ -92,10 +92,10 @@
                                 <i class="fas fa-plus"></i>
                                 add to
                             </div>
-                            <div>
+                            <button id="share-button">
                                 <i class="fas fa-plus"> </i>
                                 share
-                            </div>
+                            </button>
                             <div>
                                 <i class="fas fa-ellipsis-h"> </i>
                                 more
