Adjusted readme, transformed subscribe in button

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                             <div class="channel-name">
                                 Microverse
                             </div>
-                            <div class="subscribe-button">
+                            <button class="subscribe-button">
                                 <span class="red-part">
                                     <i class="fab fa-youtube"></i>
                                     Subscribe
@@ -71,7 +71,7 @@
                                 <span class="sub-counter">
                                     7999
                                 </span>
-                            </div>
+                            </button>
                         </div>
 
                     </div>
